--- a/app/components/SponsorAttractCards/SponsorAttractCards.module.css
+++ b/app/components/SponsorAttractCards/SponsorAttractCards.module.css
@@ -15,7 +15,7 @@
   grid-column: 2/3;
   text-decoration: none;
   width: 7rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
   justify-self: center;
 
   color: white;
