--- a/app/sponsors/page.module.css
+++ b/app/sponsors/page.module.css
@@ -1,29 +1,24 @@
 .h1 {
   grid-column: 2/3;
-  margin: auto;
-  font-size: 4rem;
+  font-size: 6rem;
+  width: 70%;
+  line-height: 1;
+  margin-bottom: 0;
 }
 
 .h1 span {
   color: #ef6975;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1000px) {
   .h1 {
-    font-size: 3rem;
-  }
-}
-
-@media (max-width: 700px) {
-  .h1 {
-    font-size: 2rem;
-
-    text-align: center;
+    font-size: 4rem;
   }
 }
 
 @media (max-width: 500px) {
   .h1 {
-    font-size: 1.6rem;
+    font-size: 3rem;
+    width: 90%;
   }
 }
